--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "bleak>=0.21.1",
+    "aiohttp>=3.8.0",
 ]
 
 [tool.pytest.ini_options]
